Bug 1174532 - Even if the APZC is not pannable, have a small slop area to consume touchmove events. r=botond